--- a/manifests/local-pv-provisioner-nvmedisk.yaml
+++ b/manifests/local-pv-provisioner-nvmedisk.yaml
@@ -42,6 +42,8 @@ spec:
         app: local-volume-provisioner
     spec:
       serviceAccountName: local-storage-admin
+      nodeSelector:
+        kubernetes.azure.com/aks-local-ssd: "true"
       initContainers:
         - name: aks-nvme-ssd-provisioner
           image: ItshakEli/aks-nvme-ssd-provisioner:v1.0.1
